[package]
name = "cargo-ghdoc"
version = "0.3.1"
edition = "2021"
authors = ["Seth Stadick <seth@fulcrumgenomics.com>"]
license = "MIT"
repository = "https://github.com/fulcrumgenomics/cargo-ghdoc"
description = "View Rust docs for open PRs"
documentation = "https://docs.rs/cargo-ghdoc"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["docs", "github", "rustdoc"]

[dependencies]
regex = "1.5.4"
uuid = {version = "0.8.2", features = ["v4"]}
