[package]
name = "cargo-ghdoc"
version = "0.5.0"
edition = "2021"
authors = ["Seth Stadick <seth@fulcrumgenomics.com>"]
license = "MIT"
repository = "https://github.com/fulcrumgenomics/cargo-ghdoc"
description = "View Rust docs for open PRs"
documentation = "https://docs.rs/cargo-ghdoc"
readme = "README.md"
categories = ["command-line-interface"]
keywords = ["docs", "github", "rustdoc"]

[dependencies]
clap = {version = "3.1.0", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.14"
regex = "1.5.4"
uuid = {version = "0.8.2", features = ["v4"]}
